// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`streamableDetails.vue > renders a song 1`] = `
<article data-v-70ebe92c="" class="flex-1 flex flex-col items-center justify-around w-screen"><img data-v-70ebe92c="" src="https://cover.site/fotd.jpg" class="my-0 mx-auto w-[calc(70vw+4px)] aspect-square rounded-full border-2 border-solid border-k-fg object-center object-cover" alt="Cover art">
  <div data-v-70ebe92c="" class="w-full flex flex-col justify-around px-6">
    <div data-v-70ebe92c="">
      <p data-v-70ebe92c="" class="text-[6vmin] font-bold mx-auto mb-4">Afraid to Shoot Strangers</p>
      <!--v-if-->
      <p data-v-70ebe92c="" class="text-[5vmin] mb-2 text-k-fg-50">Iron Maiden</p>
      <p data-v-70ebe92c="" class="text-[4vmin] text-k-fg-50">Fear of the Dark</p>
    </div>
  </div>
</article>
`;

exports[`streamableDetails.vue > renders an episode 1`] = `
<article data-v-70ebe92c="" class="flex-1 flex flex-col items-center justify-around w-screen"><img data-v-70ebe92c="" src="https://cover.site/pod.jpg" class="my-0 mx-auto w-[calc(70vw+4px)] aspect-square rounded-full border-2 border-solid border-k-fg object-center object-cover" alt="Cover art">
  <div data-v-70ebe92c="" class="w-full flex flex-col justify-around px-6">
    <div data-v-70ebe92c="">
      <p data-v-70ebe92c="" class="text-[6vmin] font-bold mx-auto mb-4">Brahms Piano Concerto No. 1</p>
      <!--v-if-->
      <p data-v-70ebe92c="" class="text-[5vmin] mb-2 text-k-fg-50">Some random dudes</p>
      <p data-v-70ebe92c="" class="text-[4vmin] text-k-fg-50">The Sticky Notes podcast</p>
    </div>
  </div>
</article>
`;
